--- a/mapView/Base.lproj/Main.storyboard
+++ b/mapView/Base.lproj/Main.storyboard
@@ -30,6 +30,13 @@
                                     <action selector="showMyLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="esW-q0-nb6"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EwI-xb-TuV">
+                                <rect key="frame" x="30" y="89" width="217" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -41,6 +48,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="distanceLabel" destination="EwI-xb-TuV" id="a95-yS-E6m"/>
                         <outlet property="mapview" destination="048-OY-qKT" id="c5Q-Uj-Bfi"/>
                     </connections>
                 </viewController>
